﻿refactor(mall-ai): Stage 6 移除 MyBatis 依赖，ReturnReason 改用 OpenFeign
- 根 pom.xml: 加 spring-cloud.version=2025.0.0 + spring-cloud-dependencies BOM
- mall-ai/pom.xml: 删 mall-mbg，加 spring-cloud-starter-openfeign
- 新建 feign/ReturnReasonClient.java (@FeignClient)
- 新建 feign/ReturnReasonFallbackFactory.java (降级返回空列表)
- 新建 domain/ReturnReasonDto.java (替代 mall-mbg 的 OmsOrderReturnReason)
- 重写 service/ReturnReasonService.java 调 Feign
- MallAiApplication 加 @EnableFeignClients
- 删除 config/MyBatisConfig.java
- application-dev.yml:
  - 删除 spring.datasource + mybatis 配置
  - 加 feign.client.config.mall-portal 配置

净减 4 个依赖 (mall-mbg, mybatis-spring-boot-starter, druid, mysql)
业务侧不再连 DB -> 真正"轻量"

Refs: mall-ai-fix-task/stage-6-remove-mybatis.md